:skull: Stop text overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3116,9 +3116,13 @@ a.btn {
 }
 
 .wishcard__message {
+  width: 100%;
   margin-bottom: 1rem;
   font-family: charm;
   font-size: 2.4rem;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  hyphens: auto;
 }
 
 @media (min-width: 576px) {
